--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "3.5",
-    "stimulus": "^1.0.1"
+    "rails-ujs": "^5.2.3",
+    "stimulus": "^1.1.1"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
